[package]
name = "index-crawler"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
color-eyre = { version = "0.6.5", default-features = false }
indicatif = "0.18.4"
reqwest = { version = "0.13.2", features = ["stream"] }
reqwest-extra = "0.2.0"
scraper = "0.25.0"
tokio = { version = "1.49.0", features = ["full"] }
mime = "0.3.17"
futures-lite = "2.6.1"
percent-encoding = "2.3.2"
bstr = "1.12.1"
